sfdx-spa-alcala/force-app/main/default/objects/Term__c/Term__c.object-meta.xml
<CustomObject>
    <description>The Term object is owned by an Account and is designed to represent a unit of time in which
academic activities are taking place.</description>
    <label>Term</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Term ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>