sfdx-spa-alcala/force-app/main/default/objects/Term__c/fields/Term_Name__c.field-meta.xml
<CustomField>
    <fullName>Term_Name__c</fullName>
    <label>Term Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>