sfdx-spa-alcala/force-app/main/default/objects/Term__c/listViews/X2017_Terms.listView-meta.xml
<ListView>
    <fullName>X2017_Terms</fullName>
    <columns>NAME</columns>
    <columns>School_Name__c</columns>
    <columns>Term_Name__c</columns>
    <columns>Term_Year__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Term_Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <label>2017 Terms</label>
</ListView>